feat(1575): implement share link
